INSTADRAM: Add on new response field

--- a/mock/mock-ig/ig-landing/ig_landing_response.ejs
+++ b/mock/mock-ig/ig-landing/ig_landing_response.ejs
@@ -129,19 +129,25 @@
                         "timestamp": "Sun Apr 19 2021 10:51:10 GMT+0700 (Indochina Time)",
                         "comments": [
                             {
+                                "image": "https://raw.githubusercontent.com/TnkNick/image/master/profiles/profile1.jpg",
                                 "name": "pm_phit.cha",
                                 "text": "I want to go there!! 🤩",
-                                "likes": false
+                                "likes": false,
+                                "timestamp": "Sun Apr 20 2021 10:51:10 GMT+0700 (Indochina Time)"
                             },
                             {
+                                "image": "https://raw.githubusercontent.com/TnkNick/image/master/profiles/profile2.jpg",
                                 "name": "ryu_kii",
                                 "text": "Please take me there 🥳",
-                                "likes": false
+                                "likes": false,
+                                "timestamp": "Sun Apr 20 2021 10:51:10 GMT+0700 (Indochina Time)"
                             },
                             {
+                                "image": "https://raw.githubusercontent.com/TnkNick/image/master/profiles/profile3.jpg",
                                 "name": "abcd_aa",
                                 "text": "Why don't you invite me!! 😡",
-                                "likes": false
+                                "likes": false,
+                                "timestamp": "Sun Apr 20 2021 10:51:10 GMT+0700 (Indochina Time)"
                             }
                         ]
                     },
@@ -162,34 +168,46 @@
                         "timestamp": "Sun Apr 18 2022 16:51:10 GMT+0700 (Indochina Time)",
                         "comments": [
                             {
+                                "image": "https://raw.githubusercontent.com/TnkNick/image/master/profiles/profile4.jpg",
                                 "name": "pm_phit.cha",
                                 "text": "I want to go there!! 🤩",
-                                "likes": false
+                                "likes": false,
+                                "timestamp": "Sun Apr 21 2021 10:51:10 GMT+0700 (Indochina Time)"
                             },
                             {
+                                "image": "https://raw.githubusercontent.com/TnkNick/image/master/profiles/profile5.jpg",
                                 "name": "ryu_kii",
                                 "text": "Please take me there 🥳",
-                                "likes": false
+                                "likes": false,
+                                "timestamp": "Sun Apr 22 2021 10:51:10 GMT+0700 (Indochina Time)"
                             },
                             {
+                                "image": "https://raw.githubusercontent.com/TnkNick/image/master/profiles/profile6.jpg",
                                 "name": "abcd_aa",
                                 "text": "Why don't you invite me!! 😡",
-                                "likes": false
+                                "likes": false,
+                                "timestamp": "Sun Apr 23 2021 10:51:10 GMT+0700 (Indochina Time)"
                             },
                             {
+                                "image": "https://raw.githubusercontent.com/TnkNick/image/master/profiles/profile7.jpg",
                                 "name": "moo_nim",
                                 "text": "You look good 😝",
-                                "likes": false
+                                "likes": false,
+                                "timestamp": "Sun Apr 23 2021 7:51:10 GMT+0700 (Indochina Time)"
                             },
                             {
+                                "image": "https://raw.githubusercontent.com/TnkNick/image/master/profiles/profile8.jpg",
                                 "name": "moo_yai",
                                 "text": "Awesome 😎",
-                                "likes": false
+                                "likes": false,
+                                "timestamp": "Sun Apr 24 2021 10:51:10 GMT+0700 (Indochina Time)"
                             },
                             {
+                                "image": "https://raw.githubusercontent.com/TnkNick/image/master/profiles/profile9.jpg",
                                 "name": "moo_naruk",
                                 "text": "Wish you happy 😆",
-                                "likes": false
+                                "likes": false,
+                                "timestamp": "Sun Apr 25 2021 10:51:10 GMT+0700 (Indochina Time)"
                             }
                         ]
                     },
@@ -210,9 +228,11 @@
                         "timestamp": "Sun Apr 17 2022 16:51:10 GMT+0700 (Indochina Time)",
                         "comments": [
                             {
+                                "image": "https://raw.githubusercontent.com/TnkNick/image/master/profiles/profile10.jpg",
                                 "name": "moo_naruk",
                                 "text": "Oh I want it so much 😤 😤",
-                                "likes": false
+                                "likes": false,
+                                "timestamp": "Sun Apr 17 2021 10:51:10 GMT+0700 (Indochina Time)"
                             }
                         ]
                     },
